# gated-norm-experiment

./: .gitignore  README.md  README_ja.md  evaluate.py  experiment.py  main.py  model.py  paper_content.txt  plot_results.py  pyproject.toml  train.py  verify_implementation.py
notebooks/: notebook.ipynb
results/: baseline.csv  gatednorm.csv  preaffine.csv
